package com.provoly.streams.equipment;

public record EventHypervisor(String category, String criticality) {
}
