package com.provoly.streams.equipment;

public record ServiceHypervisor(String category) {
}
